# CodePractice

./: CMakeLists.txt
elemental/modulo_5/clases/: D.cpp  E.cpp  F.cpp  G.cpp  code.cpp  intro_dp.cpp
elemental/modulo_6/: bfs.cpp  codigo_clase_20-8-25.cpp  dfs.cpp  dfs_modificado.cpp  dfs_topological_sort.cpp  graph_representation.cpp  tree.cpp  tree3.cpp  tree_recorrido_pre_order.cpp
elemental/modulo_6/Contest/: A.cpp  B-flood_fill.cpp
